feat: add fasthttproxy settings for upstream object
