# sdk/tyrscale-sdk-go/api/openapi.yaml
@@ -1271,6 +1271,8 @@ components:
           scheme: scheme
           port: 5248
           host: host
+          fasthttp_settings:
+            proxy_host: proxy_host
           weight: 60.27456183070403
           uuid: uuid
         - path: path
@@ -1278,6 +1280,8 @@ components:
           scheme: scheme
           port: 5248
           host: host
+          fasthttp_settings:
+            proxy_host: proxy_host
           weight: 60.27456183070403
           uuid: uuid
       properties:
@@ -1293,9 +1297,13 @@ components:
         scheme: scheme
         port: 5248
         host: host
+        fasthttp_settings:
+          proxy_host: proxy_host
         weight: 60.27456183070403
         uuid: uuid
       properties:
+        fasthttp_settings:
+          $ref: '#/components/schemas/UpstreamFastHTTPSettings'
         host:
           type: string
         path:
@@ -1316,6 +1324,13 @@ components:
           type: number
       required:
       - weight
+      type: object
+    UpstreamFastHTTPSettings:
+      example:
+        proxy_host: proxy_host
+      properties:
+        proxy_host:
+          type: string
       type: object
     UpstreamUpsertRes:
       example:
@@ -1917,6 +1932,8 @@ components:
             scheme: scheme
             port: 5248
             host: host
+            fasthttp_settings:
+              proxy_host: proxy_host
             weight: 60.27456183070403
             uuid: uuid
           - path: path
@@ -1924,6 +1941,8 @@ components:
             scheme: scheme
             port: 5248
             host: host
+            fasthttp_settings:
+              proxy_host: proxy_host
             weight: 60.27456183070403
             uuid: uuid
         message: Created Success
